Change z-index values, fix panel visibility issues

--- a/src/SZ_wLayout.css
+++ b/src/SZ_wLayout.css
@@ -494,7 +494,7 @@ cursor: pointer;
     background-color: #eeffee;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 10;
     border: 1px solid grey;
     padding: 5px;
 }
